propellor (4.3.1) UNRELEASED; urgency=medium

  * Added Propellor.Property.FreeDesktop module.

 -- Joey Hess <id@joeyh.name>  Wed, 05 Jul 2017 22:57:42 -0400

propellor (4.3.0) unstable; urgency=medium

  * DiskImage: Removed grubBooted; properties that used to need it as a
    parameter now look at Info about the bootloader that is installed in
    the chroot that the disk image is created from.
    (API change)

 -- Joey Hess <id@joeyh.name>  Wed, 05 Jul 2017 21:04:04 -0400

propellor (4.2.0) unstable; urgency=medium

  * DiskImage.grubBooted no longer takes a BIOS parameter,
    and no longer implicitly adds Grub.installed to the properties of
    the disk image. If you used DiskImage.grubBooted, you'll need to update
    your propellor configuration, removing the BIOS parameter from
    grubBooted and adding a Grub.installed property to the disk image, eg:
        & Grub.installed PC
    (API change)
  * Grub.installed: Avoid running update-grub when used in a chroot, since
    it will get confused.
  * DiskImage.Finalization: Simplified this type since it does not need to
    be used to install packages anymore. (API change)

 -- Joey Hess <id@joeyh.name>  Wed, 05 Jul 2017 18:10:49 -0400

propellor (4.1.0) unstable; urgency=medium

  * User.hasInsecurePassword makes sure shadow passwords are enabled,
    so if the insecure password is later changed, the new password won't be
    exposed.
  * Bugfix: Apache.httpsVirtualHost' must create ssl/hn/ dir earlier
    Thanks, Sean Whitton.
  * Bootstrap.clonedFrom: Fix bug that broke copying .git/config into
    chroot.
  * Diskimage.imageExists: Align disk image size to multiple of 4096
    sector size, since some programs (such as VBoxManage convertdd)
    refuse to operate on disk images not aligned to a sector size.
  * Bootstrap.bootstrappedFrom: Fix bug that caused propellor to only
    be built from the bootstrapped config the first time.
  * Bootstrap.bootstrappedFrom: Avoid doing anything when not run in a