@@ -1,6 +1,7 @@
 propellor (4.3.1) UNRELEASED; urgency=medium
 
   * Added Propellor.Property.FreeDesktop module.
+  * Added reservedSpacePercentage to the PartSpec EDSL.
 
  -- Joey Hess <id@joeyh.name>  Wed, 05 Jul 2017 22:57:42 -0400
 
